# SpaceInvaders

./: CMakeLists.txt  README.md  main.cpp
Controller/: Game.cpp  Game.h
Model/: Enemy.cpp  Enemy.h  EnemyControl.cpp  EnemyControl.h  EnemyShip.cpp  EnemyShip.h  Entity.cpp  Entity.h  PlayerTank.cpp  PlayerTank.h  World.cpp  World.h
View/: EnemyShip_sfml.cpp  EnemyShip_sfml.h  Game_sfml.cpp  Game_sfml.h  PlayerTank_sfml.cpp  PlayerTank_sfml.h
resc/: Spaceship1.xcf
